# test_arxiv

./: .gitignore  README.en.md  README.md  README.ru.md  pyproject.toml  pytest.ini
.github/workflows/: execute_tests.yml
pages/: advanced_search_page.py  main_page.py
src/pages/: advanced_search_page.py  main_page.py  page.py
tests/: attach.py  conftest.py  test_api.py  test_mobile.py  test_ui.py
tests/api/: test_api.py
tests/mobile/: conftest.py  mobile.py  test_mobile.py
tests/resources/xml_schemas/: search_query.xsd
tests/web/: conftest.py  test_advanced_search.py  test_main_page.py  test_ui.py
